User Stories: As an athlete, I want to log custom workouts to track exercises not included in preset plans
As a beginner, I want guided workouts to learn and perform exercises correctly.

--- a/fitjacket/accounts/templates/accounts/dashboard.html
+++ b/fitjacket/accounts/templates/accounts/dashboard.html
@@ -26,7 +26,7 @@
 
   <!-- Group 1: Fitness -->
   <div class="sidebar-section-title">Fitness</div>
-  <a href="#" class="sidebar-link">Log Workout</a>
+  <a href="{% url 'workouts_home' %}" class="sidebar-link">Workouts</a>
   <a href="#" class="sidebar-link">View Progress</a>
   <a href="#" class="sidebar-link">Set Reminders</a>
 
