--- a/fitjacket/accounts/templates/base.html
+++ b/fitjacket/accounts/templates/base.html
@@ -32,7 +32,8 @@
 
   <!-- Wellness Section -->
   <div class="sidebar-section-title">Wellness</div>
-  <a href="#" class="sidebar-link">Track Nutrition</a>
+  <a href="{% url 'nutrition_tracking' %}" class="sidebar-link">Track Nutrition</a>
+  <a href="{% url 'injury_log' %}" class="sidebar-link">Log Injuries</a>
   <a href="#" class="sidebar-link">AI Workout Planner</a>
 
   <!-- Community Section -->
