--- a/fitjacket/accounts/templates/base.html
+++ b/fitjacket/accounts/templates/base.html
@@ -39,6 +39,7 @@
   <!-- Community Section -->
   <div class="sidebar-section-title">Community</div>
   <a href="{% url 'challenges:list' %}" class="sidebar-link">Join Challenges</a>
+  <a href="{% url 'challenges:leaderboard' %}" class="sidebar-link">Leaderboard</a>
   <a href="#" class="sidebar-link">Profile</a>
 
   <!-- Footer -->
