--- a/fitjacket/accounts/templates/accounts/dashboard.html
+++ b/fitjacket/accounts/templates/accounts/dashboard.html
@@ -37,6 +37,7 @@
 
   <div class="sidebar-section-title">Community</div>
   <a href="{% url 'challenges:list' %}" class="sidebar-link">Join Challenges</a>
+  <a href="{% url 'challenges:leaderboard' %}" class="sidebar-link">Leaderboard</a>
   <a href="#" class="sidebar-link">Profile</a>
 
   <div class="sidebar-footer mt-4">
